welcome-app/base-manifests/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: welcome-app
  labels:
    app: welcome-app
    istio-injection: enabled
