welcome-app/base-manifests/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: welcome-app
  labels:
    app: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: atoy3731/welcome-app-ui:1.4
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: welcome-app
spec:
  selector:
    app: ui
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
